@@ -1,6 +1,7 @@
 = Version 4.0.0 Beta 3
 == Box Labels
 * [UPDATE] BarTender now is closed after every label processing. This is by design; BarTender is loaded into memory so it won't take as long to print as if it were completely shut down.
+* [BUG] Green Seattle Met labels should now print.
 
 == About Window
 * [UPDATE] Now both the Change Log and About tabs display formatted text.
